feat(scrollbar): Style scrollbar to make it more discrete
FIX: Flowercare widget

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -9,6 +9,25 @@
   overflow-y: auto;
 }
 
+.rooms::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: rgba(253, 253, 253, 0);
+  border-radius: 10px;
+}
+
+.rooms::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: rgba(253, 253, 253, 0);
+}
+
+.rooms::-webkit-scrollbar-thumb
+{
+  background-color: #00000059;
+  border-radius: 10px;
+}
+
 .room {
   position: relative;
   font-size: 20px;
