--- a/src/app/room/room.component.css
+++ b/src/app/room/room.component.css
@@ -33,6 +33,25 @@
   padding: 1em;
 }
 
+.area::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: rgba(253, 253, 253, 0);
+  border-radius: 10px;
+}
+
+.area::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: rgba(253, 253, 253, 0);
+}
+
+.area::-webkit-scrollbar-thumb
+{
+  background-color: #00000059;
+  border-radius: 10px;
+}
+
 .area-top {
   padding-bottom: 35px;
 }
